--- a/platforms/android/app/src/main/res/layout/activity_splash.xml
+++ b/platforms/android/app/src/main/res/layout/activity_splash.xml
@@ -6,13 +6,14 @@
              android:background="#0099cc"
              tools:context="com.alibaba.weex.com.alibaba.app.SplashActivity">
 
-    <TextView android:id="@+id/fullscreen_content"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:keepScreenOn="true"
-              android:textColor="#33b5e5"
-              android:textStyle="bold"
-              android:textSize="50sp"
-              android:gravity="center"
-              android:text="@string/dummy_content"/>
+    <TextView
+        android:id="@+id/fullscreen_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:keepScreenOn="true"
+        android:text="@string/dummy_content"
+        android:textColor="#33b5e5"
+        android:textSize="50sp"
+        android:textStyle="bold" />
 </FrameLayout>
